@@ -1,3 +1,4 @@
+  Support RHEL 6.5 based distros
 v1.1.0:
   Updated for facter 1.7
 v1.0.5:
